--- a/helloWorld.html
+++ b/helloWorld.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html>
+  <body>
+    <h1>
+      Hello, World!
+      <p>
+        Phillip West
+      </p>
+    </h1>
+  </body>
+</html>
