--- a/aboutMe.html
+++ b/aboutMe.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" href="aboutMeStyle.css">
+  </head>
+  <h1>
+    ABOUT ME
+  </h1>
+  <p>
+    <img src="imageOfMe.jpg">
+  </p>
+</html>
