--- a/aboutMe.html
+++ b/aboutMe.html
@@ -7,6 +7,6 @@
     ABOUT ME
   </h1>
   <p>
-    <img src="imageOfMe.jpg">
+    <img src="imageOfMe.jpg" width="650" height="433">
   </p>
 </html>
