--- a/aboutMe.html
+++ b/aboutMe.html
@@ -1,12 +1,11 @@
+<!-- The assignment was written as "using only html tags, which to me implied that we were not
+required to use any CSS for our webpage. I apologize if this is not what was expected. -->
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" href="aboutMeStyle.css">
-  </head>
   <h1>
-    ABOUT ME
+    <b>ABOUT ME</b>
   </h1>
   <p>
-    <img src="imageOfMe.jpg" width="650" height="433">
+    <img src="imageOfMe.jpg" display: block, margin-left: auto, margin-right: auto, width="650" height="433">
   </p>
 </html>
