--- a/aboutMe.html
+++ b/aboutMe.html
@@ -1,11 +1,14 @@
-<!-- The assignment was written as "using only html tags, which to me implied that we were not
-required to use any CSS for our webpage. I apologize if this is not what was expected. -->
+<!-- The assignment was written as "using only html tags, which I was not sure what that implied.
+I apologize if this is not what was expected. -->
+
 <!DOCTYPE html>
 <html>
-  <h1>
-    <b>ABOUT ME</b>
-  </h1>
-  <p>
-    <img src="imageOfMe.jpg" display: block, margin-left: auto, margin-right: auto, width="650" height="433">
-  </p>
+  <body style="background-color:rgba(0, 90, 0, 0.5)>
+    <h1 style="text-align:center">
+      <b>ABOUT ME</b>
+    </h1>
+    <p>
+      <img style="text-align:center" src="imageOfMe.jpg" width="650" height="433">
+    </p>
+  </body>
 </html>
