--- a/aboutMe.html
+++ b/aboutMe.html
@@ -3,12 +3,12 @@ I apologize if this is not what was expected. -->
 
 <!DOCTYPE html>
 <html>
-  <body style="background-color:rgba(0, 90, 0, 0.5)>
+  <body style="background-color:rgba(0, 90, 0, 0.5)">
     <h1 style="text-align:center">
       <b>ABOUT ME</b>
     </h1>
     <p>
-      <img style="text-align:center" src="imageOfMe.jpg" width="650" height="433">
+      <center><img src="imageOfMe.jpg" width="650" height="433"></center>
     </p>
   </body>
 </html>
