--- a/aboutMe.html
+++ b/aboutMe.html
@@ -1,14 +1,18 @@
-<!-- The assignment was written as "using only html tags, which I was not sure what that implied.
+<!-- The assignment was written as "using only html tags", which I was not sure what that implied.
 I apologize if this is not what was expected. -->
 
 <!DOCTYPE html>
 <html>
   <body style="background-color:rgba(0, 90, 0, 0.5)">
-    <h1 style="text-align:center">
+    <h1 style="text-align:center, font-size:200%">
       <b>ABOUT ME</b>
     </h1>
     <p>
       <center><img src="imageOfMe.jpg" width="650" height="433"></center>
+      <i>*Note: not a real photo of me</i>
+    </p>
+    <p>
+      
     </p>
   </body>
 </html>
