--- a/aboutMe.html
+++ b/aboutMe.html
@@ -8,8 +8,8 @@ I apologize if this is not what was expected. -->
       <b>ABOUT ME</b>
     </h1>
     <p>
-      <center><img src="imageOfMe.jpg" width="650" height="433"></center>
-      <i style="text-align:center">*Note: not a real photo of me</i>
+      <center><img src="imageOfMe.jpg" width="650" height="433">
+      <i>*Note: not a real photo of me</i></center>
     </p>
     <p>
       
