--- a/aboutMe.html
+++ b/aboutMe.html
@@ -4,12 +4,14 @@ I apologize if this is not what was expected. -->
 <!DOCTYPE html>
 <html>
   <body style="background-color:rgba(0, 90, 0, 0.5)">
-    <h1 style="text-align:center; font-size:200%">
+    <h1 style="text-align:center; font-size:400%; font-family:courier">
       <b>ABOUT ME</b>
     </h1>
     <p>
-      <center><img src="imageOfMe.jpg" width="650" height="433">
-      <i>*Note: not a real photo of me</i></center>
+      <center><img src="imageOfMe.jpg" width="650" height="433"></center>
+    </p>
+    <p>
+      <center><i>*Note: not a real photo of me</i></center>
     </p>
     <p>
       
