--- a/aboutMe.html
+++ b/aboutMe.html
@@ -13,8 +13,10 @@ I apologize if this is not what was expected. -->
     <p>
       <center><i>*Note: not a real photo of me</i></center>
     </p>
-    <p>
-      
+    <p style="text-indent: 50px">
+      Hello, and welcome to my page! My name is Phillip West, and I am a senior at Kent State University.
+      I am currently studying to receive a Bachelor's of Science in Computer Science and have a concentration
+      in Game Development.
     </p>
   </body>
 </html>
