--- a/aboutMe.html
+++ b/aboutMe.html
@@ -16,7 +16,10 @@ I apologize if this is not what was expected. -->
     <p style="text-indent: 50px">
       Hello, and welcome to my page! My name is Phillip West, and I am a senior at Kent State University.
       I am currently studying to receive a Bachelor's of Science in Computer Science and have a concentration
-      in Game Development.
+      in Game Development. I am very passionate about the video game industry, both since I am pursuing
+      a degree in Game Development as well as a personal dream to create my own independent game studio.
+      Video games were integral to my upbringing and meeting the most important people in my life.
+      Below you will find a list of some of my hobbies, interests, skills, and past employments.
     </p>
   </body>
 </html>
