--- a/aboutMe.html
+++ b/aboutMe.html
@@ -13,7 +13,7 @@ I apologize if this is not what was expected. -->
     <p>
       <center><i>*Note: not a real photo of me</i></center>
     </p>
-    <p style="text-indent: 50px">
+    <p style="text-indent: 50px; font-size:200%">
       Hello, and welcome to my page! My name is Phillip West, and I am a senior at Kent State University.
       I am currently studying to receive a Bachelor's of Science in Computer Science and have a concentration
       in Game Development. I am very passionate about the video game industry, both since I am pursuing
@@ -21,5 +21,13 @@ I apologize if this is not what was expected. -->
       Video games were integral to my upbringing and meeting the most important people in my life.
       Below you will find a list of some of my hobbies, interests, skills, and past employments.
     </p>
+    <div>
+      <div>
+        
+      </div>
+      <div>
+        
+      </div>
+    </div>
   </body>
 </html>
