--- a/aboutMe.html
+++ b/aboutMe.html
@@ -10,7 +10,7 @@ I apologize if this is not what was expected. -->
     <p>
       <center><img src="imageOfMe.jpg" width="650" height="433"></center>
     </p>
-    <p>
+    <p style="font-size:50%">
       <center><i>*Note: not a real photo of me</i></center>
     </p>
     <p style="text-indent: 50px; font-size:200%">
