--- a/aboutMe.html
+++ b/aboutMe.html
@@ -8,7 +8,7 @@ I apologize if this is not what was expected. -->
       <b>ABOUT ME</b>
     </h1>
     <p>
-      <center><img src="imageOfMe.jpg" width="650" height="433"></center>
+      <center><img src="imageOfMe.jpg" title="me" width="650" height="433"></center>
     </p>
     <p style="font-size:50%">
       <center><i>*Note: not a real photo of me</i></center>
