--- a/aboutMe.html
+++ b/aboutMe.html
@@ -8,7 +8,7 @@ I apologize if this is not what was expected. -->
       <b>ABOUT ME</b>
     </h1>
     <p>
-      <center><img src="imageOfMe.jpg" title="me" width="650" height="433"></center>
+      <center><img src="imageOfMe.jpg" width="650" height="433"></center>
     </p>
     <p style="font-size:50%">
       <center><i>*Note: not a real photo of me</i></center>
@@ -23,10 +23,23 @@ I apologize if this is not what was expected. -->
     </p>
     <div>
       <div>
-        
+        <ul>
+          <li>Testing</li>
+          <li>Testing</li>
+          <li>1 2 3</li>
+        </ul>
       </div>
       <div>
-        
+        <table>
+          <tr>
+            <th>Testing</th>
+            <th>Testing</th>
+          </tr>
+          <tr>
+            <td>1</td>
+            <td>2</td>
+          </tr>
+        </table>
       </div>
     </div>
   </body>
