--- a/aboutMe.html
+++ b/aboutMe.html
@@ -22,14 +22,14 @@ I apologize if this is not what was expected. -->
       Below you will find a list of some of my hobbies, interests, skills, and past employments.
     </p>
     <div>
-      <div>
+      <div style="float: left">
         <ul>
           <li>Testing</li>
           <li>Testing</li>
           <li>1 2 3</li>
         </ul>
       </div>
-      <div>
+      <div style="float: right">
         <table>
           <tr>
             <th>Testing</th>
