--- a/aboutMe.html
+++ b/aboutMe.html
@@ -23,14 +23,14 @@ I apologize if this is not what was expected. -->
     </p>
     <div>
       <div style="float: left">
-        <ul>
+        <center><ul>
           <li>Testing</li>
           <li>Testing</li>
           <li>1 2 3</li>
-        </ul>
+        </ul></center>
       </div>
       <div style="float: right">
-        <table>
+        <center><table>
           <tr>
             <th>Testing</th>
             <th>Testing</th>
@@ -39,7 +39,7 @@ I apologize if this is not what was expected. -->
             <td>1</td>
             <td>2</td>
           </tr>
-        </table>
+        </table></center>
       </div>
     </div>
   </body>
