--- a/aboutMe.html
+++ b/aboutMe.html
@@ -23,11 +23,11 @@ I apologize if this is not what was expected. -->
     </p>
     <div>
       <div style="float: left">
-        <center><ul>
-          <li>Testing</li>
+        <ul>
+          <center><li>Testing</li></center>
           <li>Testing</li>
           <li>1 2 3</li>
-        </ul></center>
+        </ul>
       </div>
       <div style="float: right">
         <center><table>
