--- a/aboutMe.html
+++ b/aboutMe.html
@@ -22,15 +22,15 @@ I apologize if this is not what was expected. -->
       Below you will find a list of some of my hobbies, interests, skills, and past employments.
     </p>
     <div>
-      <div style="float: left">
+      <div style="float: left; margin: 50px">
         <ul>
-          <center><li>Testing</li></center>
+          <li>Testing</li>
           <li>Testing</li>
           <li>1 2 3</li>
         </ul>
       </div>
       <div style="float: right">
-        <center><table>
+        <table>
           <tr>
             <th>Testing</th>
             <th>Testing</th>
@@ -39,7 +39,7 @@ I apologize if this is not what was expected. -->
             <td>1</td>
             <td>2</td>
           </tr>
-        </table></center>
+        </table>
       </div>
     </div>
   </body>
