--- a/aboutMe.html
+++ b/aboutMe.html
@@ -22,14 +22,14 @@ I apologize if this is not what was expected. -->
       Below you will find a list of some of my hobbies, interests, skills, and past employments.
     </p>
     <div>
-      <div style="float: left; margin: 50px">
+      <div style="float: left; margin-left: 50px">
         <ul>
           <li>Testing</li>
           <li>Testing</li>
           <li>1 2 3</li>
         </ul>
       </div>
-      <div style="float: right">
+      <div style="float: right; margin-right: 50px">
         <table>
           <tr>
             <th>Testing</th>
