--- a/aboutMe.html
+++ b/aboutMe.html
@@ -29,7 +29,7 @@ I apologize if this is not what was expected. -->
           <li>1 2 3</li>
         </ul>
       </div>
-      <div style="float: right; margin-right: 50px">
+      <div style="float: right; margin-left: 50px">
         <table>
           <tr>
             <th>Testing</th>
