--- a/aboutMe.html
+++ b/aboutMe.html
@@ -22,14 +22,20 @@ I apologize if this is not what was expected. -->
       Below you will find a list of some of my hobbies, interests, skills, and past employments.
     </p>
     <div>
-      <div style="float: left; margin-left: 50px">
+      <div style="float: left; margin-left: 200px; font-family:georgia">
+        <h3 style="margin-left: 100px"; font-family:courier>
+          Skills and Hobbies
+        </h3>
         <ul>
           <li>Testing</li>
           <li>Testing</li>
           <li>1 2 3</li>
         </ul>
       </div>
-      <div style="float: right; margin-left: 50px">
+      <div style="float: right; margin-right: 200px; font-family:georgia">
+        <h3 style="margin-right: 100px; font-family:courier">
+          Past Employment
+        </h3>
         <table>
           <tr>
             <th>Testing</th>
