--- a/aboutMe.html
+++ b/aboutMe.html
@@ -23,30 +23,52 @@ I apologize if this is not what was expected. -->
     </p>
     <div>
       <div style="float: left; margin-left: 200px; font-family:georgia">
-        <h3 style="margin-left: 100px"; font-family:courier>
-          Skills and Hobbies
+        <h3 style="margin-left: 100px"; font-family:courier; font-size:115%">
+          <b>SKILLS AND HOBBIES</b>
         </h3>
-        <ul>
-          <li>Testing</li>
-          <li>Testing</li>
-          <li>1 2 3</li>
+        <ul style="list-style-type:square">
+          <li>Playing/making video games</li>
+          <li>Working as/on a team</li>
+          <li>Manual/petty labor</li>
+          <li>Adept in languages such as:</li>
+          <ul>
+            <li>Python</li>
+            <li>C++</li>
+            <li>Javascript</li>
+            <li>HTML</li>
+          </ul>
         </ul>
       </div>
       <div style="float: right; margin-right: 200px; font-family:georgia">
-        <h3 style="margin-right: 100px; font-family:courier">
-          Past Employment
+        <h3 style="margin-right: 100px; font-family:courier; font-size:115%">
+          <b>PAST EMPLOYMENT</b>
         </h3>
-        <table>
+        <table style="border:1px solid black">
           <tr>
-            <th>Testing</th>
-            <th>Testing</th>
+            <th>JOB/TITLE</th>
+            <th>LENGTH</th>
+            <th>DESCRIPTION</th>
           </tr>
           <tr>
-            <td>1</td>
-            <td>2</td>
+            <td>Farmhand</td>
+            <td>21 years</td>
+            <td>I grew up on a farm and have helped in various tasks throughout my life.</td>
+          </tr>
+          <tr>
+            <td>Cook</td>
+            <td>2 months</td>
+            <td>I worked at a local restaurant during high school right before COVID-19.</td>
+          </tr>
+          <tr>
+            <td>NHS Member</td>
+            <td>6 years</td>
+            <td>Through middle and high school I was a member of the local chapter of the NHS.</td>
           </tr>
         </table>
       </div>
     </div>
+    <h1 style="text-align:center; font-family:courier">
+      <b>LINKS</b>
+    </h1>
   </body>
 </html>
