--- a/aboutMe.html
+++ b/aboutMe.html
@@ -22,8 +22,8 @@ I apologize if this is not what was expected. -->
       Below you will find a list of some of my hobbies, interests, skills, and past employments.
     </p>
     <div>
-      <div style="float: left; margin-left: 200px; font-family:georgia">
-        <h3 style="margin-left: 100px"; font-family:courier; font-size:115%">
+      <div style="float: left; margin-left: 100px; font-family:georgia">
+        <h3 style="margin-left: 50px"; font-family:courier; font-size:115%">
           <b>SKILLS AND HOBBIES</b>
         </h3>
         <ul style="list-style-type:square">
@@ -39,30 +39,36 @@ I apologize if this is not what was expected. -->
           </ul>
         </ul>
       </div>
-      <div style="float: right; margin-right: 200px; font-family:georgia">
-        <h3 style="margin-right: 100px; font-family:courier; font-size:115%">
+      <div style="float: right; margin-right: 100px; font-family:georgia">
+        <h3 style="margin-right: 50px; font-family:courier; font-size:115%">
           <b>PAST EMPLOYMENT</b>
         </h3>
         <table style="border:1px solid black">
           <tr>
-            <th>JOB/TITLE</th>
-            <th>LENGTH</th>
-            <th>DESCRIPTION</th>
+            <th style="border:1px solid black">JOB/TITLE</th>
+            <th style="border:1px solid black">LENGTH</th>
+            <th style="border:1px solid black">DESCRIPTION</th>
           </tr>
           <tr>
-            <td>Farmhand</td>
-            <td>21 years</td>
-            <td>I grew up on a farm and have helped in various tasks throughout my life.</td>
+            <td style="border:1px solid black">Farmhand</td>
+            <td style="border:1px solid black">21 years</td>
+            <td style="border:1px solid black">
+              I grew up on a farm and have helped in various tasks throughout my life.
+            </td>
           </tr>
           <tr>
-            <td>Cook</td>
-            <td>2 months</td>
-            <td>I worked at a local restaurant during high school right before COVID-19.</td>
+            <td style="border:1px solid black">Cook</td>
+            <td style="border:1px solid black">2 months</td>
+            <td style="border:1px solid black">
+              I worked at a local restaurant during high school right before COVID-19.
+            </td>
           </tr>
           <tr>
-            <td>NHS Member</td>
-            <td>6 years</td>
-            <td>Through middle and high school I was a member of the local chapter of the NHS.</td>
+            <td style="border:1px solid black">NHS Member</td>
+            <td style="border:1px solid black">6 years</td>
+            <td style="border:1px solid black">
+              Through middle and high school I was a member of the local chapter of the NHS.
+            </td>
           </tr>
         </table>
       </div>
