--- a/aboutMe.html
+++ b/aboutMe.html
@@ -73,8 +73,10 @@ I apologize if this is not what was expected. -->
         </table>
       </div>
     </div>
-    <h1 style="text-align:center; font-family:courier">
-      <b>LINKS</b>
-    </h1>
+    <div>
+      <h1 style="text-align:center; font-family:courier">
+        <b>LINKS</b>
+      </h1>
+    </div>
   </body>
 </html>
