--- a/aboutMe.html
+++ b/aboutMe.html
@@ -22,8 +22,8 @@ I apologize if this is not what was expected. -->
       Below you will find a list of some of my hobbies, interests, skills, and past employments.
     </p>
     <div>
-      <div style="float: left; margin-left: 100px; font-family:georgia">
-        <h3 style="margin-left: 50px"; font-family:courier; font-size:115%">
+      <div style="float: left; margin-left: 150px; font-family:georgia">
+        <h3 style="font-family:courier; font-size:115%">
           <b>SKILLS AND HOBBIES</b>
         </h3>
         <ul style="list-style-type:square">
@@ -39,8 +39,8 @@ I apologize if this is not what was expected. -->
           </ul>
         </ul>
       </div>
-      <div style="float: right; margin-right: 100px; font-family:georgia">
-        <h3 style="margin-right: 50px; font-family:courier; font-size:115%">
+      <div style="float: right; margin-right: 50px; font-family:georgia">
+        <h3 style="font-family:courier; font-size:115%">
           <b>PAST EMPLOYMENT</b>
         </h3>
         <table style="border:1px solid black">
