--- a/aboutMe.html
+++ b/aboutMe.html
@@ -40,7 +40,7 @@ I apologize if this is not what was expected. -->
         </ul>
       </div>
       <div style="float: right; margin-right: 50px; font-family:georgia">
-        <h3 style="font-family:courier; font-size:115%">
+        <h3 style="margin-left: 100px; font-family:courier; font-size:115%">
           <b>PAST EMPLOYMENT</b>
         </h3>
         <table style="border:1px solid black">
