--- a/aboutMeStyled.html
+++ b/aboutMeStyled.html
@@ -13,5 +13,13 @@
   <p class="desc">
     *Note: not a real photo of me
   </p>
+  <p class="mainBody">
+    Hello, and welcome to my page! My name is Phillip West, and I am a senior at Kent State University.
+    I am currently studying to receive a Bachelor's of Science in Computer Science and have a concentration
+    in Game Development. I am very passionate about the video game industry, both since I am pursuing
+    a degree in Game Development as well as a personal dream to create my own independent game studio.
+    Video games were integral to my upbringing and meeting the most important people in my life.
+    Below you will find a list of some of my hobbies, interests, skills, and past employments.
+  </p>
 </body>
 </html>
