--- a/aboutMeStyled.html
+++ b/aboutMeStyled.html
@@ -21,5 +21,57 @@
     Video games were integral to my upbringing and meeting the most important people in my life.
     Below you will find a list of some of my hobbies, interests, skills, and past employments.
   </p>
+  <div>
+    <div class="listHolder">
+      <h3 class="listHeader">
+        SKILLS AND HOBBIES
+      </h3>
+      <ul>
+        <li>Playing/making video games</li>
+        <li>Working as/on a team</li>
+        <li>Manual/petty labor</li>
+        <li>Adept in programming languages such as:</li>
+        <ul class="subList">
+          <li>Python</li>
+          <li>C++</li>
+          <li>Javascript</li>
+          <li>HTML</li>
+        </ul>
+      </ul>
+    </div>
+    <div class="tableHolder">
+      <h3 class="tableHeader">
+        PAST EMPLOYMENT
+      </h3>
+      <table>
+        <tr>
+          <th>JOB/TITLE</th>
+          <th>LENGTH OF EMPLOYMENT</th>
+          <th>DESCRIPTION OF POSITION</th>
+        </tr>
+        <tr>
+          <td>Farmhand</td>
+          <td>21 years</td>
+          <td>
+            I grew up on a farm and have helped in various tasks throughout my life.
+          </td>
+        </tr>
+        <tr>
+          <td>Cook</td>
+          <td>2 months</td>
+          <td>
+            I worked at a local restaurant during high school right before COVID-19.
+          </td>
+        </tr>
+        <tr>
+          <td> NHS Member</td>
+          <td>6 years</td>
+          <td>
+            Through middle and high school I was a member of the local chapter of the NHS.
+          </td>
+        </tr>
+      </table>
+    </div>
+  </div>
 </body>
 </html>
