--- a/aboutMeResponsive.html
+++ b/aboutMeResponsive.html
@@ -9,8 +9,10 @@
     </script>
   </head>
   <body>
-    <h1 style="text-align:center; font-size:600%; font-family:courier">
-      <b>ABOUT ME</b>
-    </h1>
+    <div class="container">
+      <h1 style="text-align:center; font-size:600%; font-family:courier">
+        <b>ABOUT ME</b>
+      </h1>
+    </div>
   </body>
 </html>
