--- a/aboutMeResponsive.html
+++ b/aboutMeResponsive.html
@@ -9,10 +9,20 @@
     </script>
   </head>
   <body>
-    <div class="container">
-      <h1 style="text-align:center; font-size:600%; font-family:courier">
-        <b>ABOUT ME</b>
-      </h1>
-    </div>
+    <nav class="navbar-nav fixed-top">
+      <div class="container-fluid">
+        <ul class="nav nav-tabs">
+          <li class="nav-item">
+            <a class="nav-link active" data-bs-toggle="tab" href="aboutMe">About Me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" data-bs-toggle="tab" href="skills">Skills and Hobbies</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" data-bs-toggle="tab" href="jobs">Past Employment</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
   </body>
 </html>
