--- a/aboutMeResponsive.html
+++ b/aboutMeResponsive.html
@@ -9,7 +9,7 @@
     </script>
   </head>
   <body>
-    <nav class="navbar-nav fixed-top">
+    <nav class="navbar-nav bg-success navbar-dark fixed-bottom">
       <div class="container-fluid">
         <ul class="nav nav-tabs">
           <li class="nav-item">
