--- a/aboutMeResponsive.html
+++ b/aboutMeResponsive.html
@@ -9,6 +9,7 @@
     </script>
   </head>
   <body>
+    <div class="container mt-3">
     <nav class="navbar-nav navbar-expand-sm bg-success navbar-dark fixed-bottom">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
@@ -42,5 +43,6 @@
         </div>
       </div>
     </nav>
+    </div>
   </body>
 </html>
