--- a/aboutMeResponsive.html
+++ b/aboutMeResponsive.html
@@ -9,8 +9,11 @@
     </script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-sm bg-success navbar-light">
+    <nav class="navbar navbar-expand-sm bg-success navbar-light fixed-bottom">
       <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="imageOfMe.jpg" alt="About Me" style="width:40px;" class="rounded-pill">
+        </a>
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
@@ -22,6 +25,10 @@
             <a class="nav-link" href="#">Link</a>
           </li>
         </ul>
+        <form class="d-flex">
+          <input class="form-control me-2" type="text" placeholder="Search">
+          <button class="btn btn-primary" type="button">Search</button>
+        </form>
       </div>
     </nav>
   </body>
