--- a/aboutMeResponsive.html
+++ b/aboutMeResponsive.html
@@ -14,7 +14,7 @@
         <a class="navbar-brand" href="#">
           <img src="imageOfMe.jpg" alt="About Me" style="width:40px;" class="rounded-pill">
         </a>
-        <ul class="navbar-nav">
+        <ul class="navbar-nav me-auto">
           <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
           </li>
