--- a/aboutMeResponsive.html
+++ b/aboutMeResponsive.html
@@ -16,13 +16,13 @@
         </a>
         <ul class="navbar-nav me-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="#about">About Me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="#skills">Skills and Hobbies</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="#jobs">Past Employment</a>
           </li>
         </ul>
         <form class="d-flex">
@@ -31,5 +31,16 @@
         </form>
       </div>
     </nav>
+    <div class="tab-content">
+      <div id="about" class="container">
+        <p>Sample text</p>
+      </div>
+      <div id="skills" class="container">
+        <p>Sample text</p>
+      </div>
+      <div id="jobs" class="container">
+        <p>Sample text</p>
+      </div>
+    </div>
   </body>
 </html>
