--- a/aboutMeResponsive.html
+++ b/aboutMeResponsive.html
@@ -32,13 +32,13 @@
       </div>
     </nav>
     <div class="tab-content">
-      <div id="about" class="container">
+      <div id="about" class="container-fluid">
         <p>Sample text</p>
       </div>
-      <div id="skills" class="container">
+      <div id="skills" class="container-fluid">
         <p>Sample text</p>
       </div>
-      <div id="jobs" class="container">
+      <div id="jobs" class="container-fluid">
         <p>Sample text</p>
       </div>
     </div>
