--- a/aboutMeResponsive.html
+++ b/aboutMeResponsive.html
@@ -9,7 +9,8 @@
     </script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-sm bg-success navbar-light fixed-bottom">
+    <div class="container mt-3>
+      <nav class="navbar navbar-expand-sm bg-success navbar-light fixed-bottom">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img src="imageOfMe.jpg" alt="About Me" style="width:40px;" class="rounded-pill">
@@ -41,6 +42,7 @@
       <div id="jobs" class="container-fluid">
         <p>Sample text</p>
       </div>
-      </div>
+    </div>
+    </div>
   </body>
 </html>
