--- a/aboutMeResponsive.html
+++ b/aboutMeResponsive.html
@@ -31,7 +31,7 @@
         </form>
       </div>
     </nav>
-    <div class="tab-content">
+    <div>
       <div id="about" class="container-fluid">
         <p>Sample text</p>
       </div>
