--- a/aboutMeResponsive.html
+++ b/aboutMeResponsive.html
@@ -31,13 +31,13 @@
         </form>
       </div>
     </nav>
-    <div id="about" class="container-fluid">
+    <div id="about">
       <p>Sample text</p>
     </div>
-    <div id="skills" class="container-fluid">
+    <div id="skills">
       <p>Sample text</p>
     </div>
-    <div id="jobs" class="container-fluid">
+    <div id="jobs">
       <p>Sample text</p>
     </div>
   </body>
