--- a/aboutMeResponsive.html
+++ b/aboutMeResponsive.html
@@ -16,7 +16,7 @@
         </a>
         <ul class="navbar-nav me-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#about">About Me</a>
+            <a class="nav-link active" href="#about">About Me</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#skills">Skills and Hobbies</a>
