--- a/aboutMeResponsive.html
+++ b/aboutMeResponsive.html
@@ -9,36 +9,18 @@
     </script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-sm bg-success navbar-light fixed-bottom">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img src="imageOfMe.jpg" alt="About Me" style="width:40px;" class="rounded-pill">
-        </a>
-        <ul class="navbar-nav me-auto">
-          <li class="nav-item">
-            <a class="nav-link active" href="#about">About Me</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#skills">Skills and Hobbies</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#jobs">Past Employment</a>
-          </li>
-        </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="text" placeholder="Search">
-          <button class="btn btn-primary" type="button">Search</button>
-        </form>
-      </div>
-    </nav>
-    <div id="about" class="container-fluid mt-3">
-    <p>Sample text</p>
-    </div>
-    <div id="skills" class="container-fluid mt-3">
-      <p>Sample text</p>
-    </div>
-    <div id="jobs" class="container-fluid mt-3">
-      <p>Sample text</p>
+    <div class="container mt-3>
+      <ul class="nav nav-tabs">
+        <li>
+          <a class="nav-link active" data-bs-toggle="tab" href="#about">About Me</a>
+        </li>
+        <li>
+          <a class="nav-link" data-bs-toggle="tab" href="#skills">Skills & Hobbies</a>
+        </li>
+        <li>
+          <a class="nav-link" data-bs-toggle="tab" href="#jobs">Past Employment</a>
+        </li>
+      </ul>
     </div>
   </body>
 </html>
