--- a/aboutMeResponsive.html
+++ b/aboutMeResponsive.html
@@ -9,7 +9,7 @@
     </script>
   </head>
   <body>
-    <div class="container mt-3>
+    <div class="container mt-3">
       <ul class="nav nav-tabs">
         <li class="nav-item">
           <a class="nav-link active" data-bs-toggle="tab" href="#about">About Me</a>
@@ -21,6 +21,17 @@
           <a class="nav-link" data-bs-toggle="tab" href="#jobs">Past Employment</a>
         </li>
       </ul>
+      <div class="tab-content">
+        <div id="about" class="container tab-pane fade">
+          <p>Sample text</p>
+        </div>
+        <div id="skills" class="container tab-pane fade">
+          <p>Sample text</p>
+        </div>
+        <div id="jobs" class="container tab-pane fade">
+          <p>Sample text</p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
