--- a/aboutMeResponsive.html
+++ b/aboutMeResponsive.html
@@ -22,7 +22,7 @@
         </li>
       </ul>
       <div class="tab-content">
-        <div id="about" class="container tab-pane fade">
+        <div id="about" class="container tab-pane active">
           <p>Sample text</p>
         </div>
         <div id="skills" class="container tab-pane fade">
