--- a/aboutMeResponsive.html
+++ b/aboutMeResponsive.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="container mt-3">
-      <ul class="nav nav-tabs">
+      <ul class="nav nav-tabs bg-success">
         <li class="nav-item">
           <a class="nav-link active" data-bs-toggle="tab" href="#about">About Me</a>
         </li>
@@ -22,13 +22,13 @@
         </li>
       </ul>
       <div class="tab-content">
-        <div id="about" class="container tab-pane active">
+        <div id="about" class="container tab-pane active"><br>
           <p>Sample text</p>
         </div>
-        <div id="skills" class="container tab-pane fade">
+        <div id="skills" class="container tab-pane fade"><br>
           <p>Sample text</p>
         </div>
-        <div id="jobs" class="container tab-pane fade">
+        <div id="jobs" class="container tab-pane fade"><br>
           <p>Sample text</p>
         </div>
       </div>
