--- a/aboutMeResponsive.html
+++ b/aboutMeResponsive.html
@@ -8,9 +8,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js">
     </script>
   </head>
-  <body>
+  <body class="bg-success bg-gradient">
     <div class="container mt-3">
-      <ul class="nav nav-tabs bg-success">
+      <ul class="nav nav-tabs">
         <li class="nav-item">
           <a class="nav-link active" data-bs-toggle="tab" href="#about">About Me</a>
         </li>
