--- a/aboutMeResponsive.html
+++ b/aboutMeResponsive.html
@@ -8,16 +8,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js">
     </script>
   </head>
-  <body class="bg-success bg-gradient">
+  <body class="bg-success">
     <div class="container mt-3">
       <ul class="nav nav-tabs">
-        <li class="nav-item">
+        <li class="nav-item bg-light">
           <a class="nav-link active" data-bs-toggle="tab" href="#about">About Me</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item bg-light">
           <a class="nav-link" data-bs-toggle="tab" href="#skills">Skills & Hobbies</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item bg-light">
           <a class="nav-link" data-bs-toggle="tab" href="#jobs">Past Employment</a>
         </li>
       </ul>
