--- a/aboutMeResponsive.html
+++ b/aboutMeResponsive.html
@@ -11,13 +11,13 @@
   <body class="bg-success">
     <div class="container mt-3">
       <ul class="nav nav-tabs">
-        <li class="nav-item bg-light">
+        <li class="nav-item">
           <a class="nav-link active" data-bs-toggle="tab" href="#about">About Me</a>
         </li>
-        <li class="nav-item bg-light">
+        <li class="nav-item">
           <a class="nav-link" data-bs-toggle="tab" href="#skills">Skills & Hobbies</a>
         </li>
-        <li class="nav-item bg-light">
+        <li class="nav-item">
           <a class="nav-link" data-bs-toggle="tab" href="#jobs">Past Employment</a>
         </li>
       </ul>
