--- a/aboutMeResponsive.html
+++ b/aboutMeResponsive.html
@@ -23,13 +23,13 @@
       </ul>
       <div class="tab-content">
         <div id="about" class="container tab-pane active"><br>
-          <p>Sample text</p>
+          <h1 class="fw-bold text-center">ABOUT ME</h1>
         </div>
         <div id="skills" class="container tab-pane fade"><br>
-          <p>Sample text</p>
+          <h1 class="fw-bold text-center">SKILLS AND HOBBIES</h1>
         </div>
         <div id="jobs" class="container tab-pane fade"><br>
-          <p>Sample text</p>
+          <h1 class="fw-bold text-center">PAST EMPLOYMENTS</h1>
         </div>
       </div>
     </div>
