--- a/aboutMeResponsive.html
+++ b/aboutMeResponsive.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js">
     </script>
   </head>
-  <body class="bg-success opacity-50">
+  <body class="bg-success">
     <div class="container mt-3">
       <ul class="nav nav-tabs">
         <li class="nav-item">
@@ -24,6 +24,7 @@
       <div class="tab-content">
         <div id="about" class="container tab-pane active"><br>
           <h1 class="fw-bold text-center">ABOUT ME</h1>
+          <img src="imageOfMe.jpg" class="img-thumbnail" alt="Pictuer of Me"> 
         </div>
         <div id="skills" class="container tab-pane fade"><br>
           <h1 class="fw-bold text-center">SKILLS AND HOBBIES</h1>
