--- a/aboutMeResponsive.html
+++ b/aboutMeResponsive.html
@@ -24,7 +24,7 @@
       <div class="tab-content">
         <div id="about" class="container tab-pane active"><br>
           <h1 class="fw-bold text-center">ABOUT ME</h1>
-          <img src="imageOfMe.jpg" class="img-thumbnail" alt="Pictuer of Me"> 
+          <img src="imageOfMe.jpg" class="img-thumbnail img-fluid" alt="Pictuer of Me"> 
         </div>
         <div id="skills" class="container tab-pane fade"><br>
           <h1 class="fw-bold text-center">SKILLS AND HOBBIES</h1>
