--- a/aboutMeResponsive.html
+++ b/aboutMeResponsive.html
@@ -24,7 +24,8 @@
       <div class="tab-content">
         <div id="about" class="container tab-pane active"><br>
           <h1 class="fw-bold text-center">ABOUT ME</h1>
-          <img src="imageOfMe.jpg" class="img-fluid" alt="Picture of Me"> 
+          <img src="imageOfMe.jpg" class="img-fluid rounded" alt="Picture of Me">
+          <p class="fst-italic">*Note: not a real photo of me</p>
         </div>
         <div id="skills" class="container tab-pane fade"><br>
           <h1 class="fw-bold text-center">SKILLS AND HOBBIES</h1>
