--- a/aboutMeResponsive.html
+++ b/aboutMeResponsive.html
@@ -25,7 +25,15 @@
         <div id="about" class="container tab-pane active"><br>
           <h1 class="fw-bold text-center">ABOUT ME</h1>
           <img src="imageOfMe.jpg" class="img-fluid rounded" alt="Picture of Me">
-          <p class="fst-italic">*Note: not a real photo of me</p>
+          <p class="fst-italic text-end">*Note: not a real photo of me</p>
+          <h4 class="text-center"> Hello, and welcome to my page! My name is Phillip West, and I am a senior at
+                                   Kent State University. I am currently studying to receive a Bachelor's of
+                                   Science in Computer Science and have a concentration in Game Development.
+                                   I am very passionate about the video game industry, both since I am pursuing
+                                   a degree in Game Development as well as a personal dream to create my own
+                                   independent game studio. Video games were integral to my upbringing and meeting
+                                   the most important people in my life. Click the tabs at the top of the page to find
+                                   a list of some of my hobbies, interests, skills, and past employments. </h4>
         </div>
         <div id="skills" class="container tab-pane fade"><br>
           <h1 class="fw-bold text-center">SKILLS AND HOBBIES</h1>
