--- a/aboutMeResponsive.html
+++ b/aboutMeResponsive.html
@@ -25,7 +25,7 @@
         <div id="about" class="container tab-pane active"><br>
           <h1 class="fw-bold text-center">ABOUT ME</h1>
           <img src="imageOfMe.jpg" class="img-fluid rounded" alt="Picture of Me">
-          <p class="fst-italic text-end">*Note: not a real photo of me</p>
+          <p class="fst-italic text-end">*Note: not a real photo of me</p><br>
           <h4 class="text-center"> Hello, and welcome to my page! My name is Phillip West, and I am a senior at
                                    Kent State University. I am currently studying to receive a Bachelor's of
                                    Science in Computer Science and have a concentration in Game Development.
@@ -36,7 +36,22 @@
                                    a list of some of my hobbies, interests, skills, and past employments. </h4>
         </div>
         <div id="skills" class="container tab-pane fade"><br>
-          <h1 class="fw-bold text-center">SKILLS AND HOBBIES</h1>
+          <h1 class="fw-bold text-center">SKILLS AND HOBBIES</h1><br>
+          <h4 class="text-center">Some hobbies and skills I have are:</h4>
+          <ul class="list-group">
+            <li class="list-group-item border-0>Playing/making video games</li>
+            <li class="list-group-item border-0>Working as/on a team</li>
+            <li class="list-group-item border-0>Leading/supervising a team</li>
+            <li class="list-group-item border-0>Manual/petty labor</li>
+            <li class="list-group-item border-0>Operating machinery (both heavy and technical</li>
+          </ul><br>
+          <h4 class="text-center">Some programming languages I can use are:</h4>
+          <ul class="list-group">
+            <li class="list-group-item border-0>C++</li>
+            <li class="list-group-item border-0>Python</li>
+            <li class="list-group-item border-0>Javascript</li>
+            <li class="list-group-item border-0>HTML</li>
+          </ul>
         </div>
         <div id="jobs" class="container tab-pane fade"><br>
           <h1 class="fw-bold text-center">PAST EMPLOYMENTS</h1>
