--- a/aboutMeResponsive.html
+++ b/aboutMeResponsive.html
@@ -39,18 +39,18 @@
           <h1 class="fw-bold text-center">SKILLS AND HOBBIES</h1><br>
           <h4 class="text-center">Some hobbies and skills I have are:</h4>
           <ul class="list-group">
-            <li class="list-group-item border-0>Playing/making video games</li>
-            <li class="list-group-item border-0>Working as/on a team</li>
-            <li class="list-group-item border-0>Leading/supervising a team</li>
-            <li class="list-group-item border-0>Manual/petty labor</li>
-            <li class="list-group-item border-0>Operating machinery (both heavy and technical</li>
+            <li class="list-group-item border-0">Playing/making video games</li>
+            <li class="list-group-item border-0">Working as/on a team</li>
+            <li class="list-group-item border-0">Leading/supervising a team</li>
+            <li class="list-group-item border-0">Manual/petty labor</li>
+            <li class="list-group-item border-0">Operating machinery (both heavy and technical</li>
           </ul><br>
           <h4 class="text-center">Some programming languages I can use are:</h4>
           <ul class="list-group">
-            <li class="list-group-item border-0>C++</li>
-            <li class="list-group-item border-0>Python</li>
-            <li class="list-group-item border-0>Javascript</li>
-            <li class="list-group-item border-0>HTML</li>
+            <li class="list-group-item border-0">C++</li>
+            <li class="list-group-item border-0">Python</li>
+            <li class="list-group-item border-0">Javascript</li>
+            <li class="list-group-item border-0">HTML</li>
           </ul>
         </div>
         <div id="jobs" class="container tab-pane fade"><br>
