--- a/aboutMeResponsive.html
+++ b/aboutMeResponsive.html
@@ -37,20 +37,20 @@
         </div>
         <div id="skills" class="container tab-pane fade"><br>
           <h1 class="fw-bold text-center">SKILLS AND HOBBIES</h1><br>
-          <h4 class="text-center">Some hobbies and skills I have are:</h4><br>
-          <ul class="list-group bg-success">
-            <li class="list-group-item border-0">Playing/making video games</li>
-            <li class="list-group-item border-0">Working as/on a team</li>
-            <li class="list-group-item border-0">Leading/supervising a team</li>
-            <li class="list-group-item border-0">Manual/petty labor</li>
-            <li class="list-group-item border-0">Operating machinery (both heavy and technical</li>
+          <h4 class="text-center">Some hobbies and skills I have are:</h4>
+          <ul class="list-group">
+            <li class="list-group-item border-0 bg-success">Playing/making video games</li>
+            <li class="list-group-item border-0 bg-success">Working as/on a team</li>
+            <li class="list-group-item border-0 bg-success">Leading/supervising a team</li>
+            <li class="list-group-item border-0 bg-success">Manual/petty labor</li>
+            <li class="list-group-item border-0 bg-success">Operating machinery (both heavy and technical</li>
           </ul><br>
-          <h4 class="text-center">Some programming languages I can use are:</h4><br>
-          <ul class="list-group bg-success">
-            <li class="list-group-item border-0">C++</li>
-            <li class="list-group-item border-0">Python</li>
-            <li class="list-group-item border-0">Javascript</li>
-            <li class="list-group-item border-0">HTML</li>
+          <h4 class="text-center">Some programming languages I can use are:</h4>
+          <ul class="list-group">
+            <li class="list-group-item border-0 bg-success">C++</li>
+            <li class="list-group-item border-0 bg-success">Python</li>
+            <li class="list-group-item border-0 bg-success">Javascript</li>
+            <li class="list-group-item border-0 bg-success">HTML</li>
           </ul>
         </div>
         <div id="jobs" class="container tab-pane fade"><br>
