--- a/aboutMeResponsive.html
+++ b/aboutMeResponsive.html
@@ -39,18 +39,18 @@
           <h1 class="fw-bold text-center">SKILLS AND HOBBIES</h1><br>
           <h4 class="text-center">Some hobbies and skills I have are:</h4>
           <ul class="list-group">
-            <li class="list-group-item border-0 bg-success">Playing/making video games</li>
-            <li class="list-group-item border-0 bg-success">Working as/on a team</li>
-            <li class="list-group-item border-0 bg-success">Leading/supervising a team</li>
-            <li class="list-group-item border-0 bg-success">Manual/petty labor</li>
-            <li class="list-group-item border-0 bg-success">Operating machinery (both heavy and technical</li>
+            <li class="list-group-item border-0 bg-success text-uppercase">Playing/making video games</li>
+            <li class="list-group-item border-0 bg-success text-uppercase">Working as/on a team</li>
+            <li class="list-group-item border-0 bg-success text-uppercase">Leading/supervising a team</li>
+            <li class="list-group-item border-0 bg-success text-uppercase">Manual/petty labor</li>
+            <li class="list-group-item border-0 bg-success text-uppercase">Operating machinery (both heavy and technical</li>
           </ul><br>
           <h4 class="text-center">Some programming languages I can use are:</h4>
           <ul class="list-group">
-            <li class="list-group-item border-0 bg-success">C++</li>
-            <li class="list-group-item border-0 bg-success">Python</li>
-            <li class="list-group-item border-0 bg-success">Javascript</li>
-            <li class="list-group-item border-0 bg-success">HTML</li>
+            <li class="list-group-item border-0 bg-success text-uppercase">C++</li>
+            <li class="list-group-item border-0 bg-success text-uppercase">Python</li>
+            <li class="list-group-item border-0 bg-success text-uppercase">Javascript</li>
+            <li class="list-group-item border-0 bg-success text-uppercase">HTML</li>
           </ul>
         </div>
         <div id="jobs" class="container tab-pane fade"><br>
