--- a/aboutMeResponsive.html
+++ b/aboutMeResponsive.html
@@ -43,7 +43,8 @@
             <li class="list-group-item border-0 bg-success text-uppercase">Working as/on a team</li>
             <li class="list-group-item border-0 bg-success text-uppercase">Leading/supervising a team</li>
             <li class="list-group-item border-0 bg-success text-uppercase">Manual/petty labor</li>
-            <li class="list-group-item border-0 bg-success text-uppercase">Operating machinery (both heavy and technical</li>
+            <li class="list-group-item border-0 bg-success text-uppercase">Operating machinery (both heavy and technical)</li>
+            <li class="list-group-item border-0 bg-success text-uppercase">Diagnosing technical issues</li>
           </ul><br>
           <h4 class="text-center">Some programming languages I can use are:</h4>
           <ul class="list-group">
