--- a/aboutMeResponsive.html
+++ b/aboutMeResponsive.html
@@ -39,23 +39,44 @@
           <h1 class="fw-bold text-center">SKILLS AND HOBBIES</h1><br>
           <h4 class="text-center">Some hobbies and skills I have are:</h4>
           <ul class="list-group">
-            <li class="list-group-item border-0 bg-success text-uppercase">Playing/making video games</li>
-            <li class="list-group-item border-0 bg-success text-uppercase">Working as/on a team</li>
-            <li class="list-group-item border-0 bg-success text-uppercase">Leading/supervising a team</li>
-            <li class="list-group-item border-0 bg-success text-uppercase">Manual/petty labor</li>
-            <li class="list-group-item border-0 bg-success text-uppercase">Operating machinery (both heavy and technical)</li>
-            <li class="list-group-item border-0 bg-success text-uppercase">Diagnosing technical issues</li>
+            <li class="list-group-item border-0 bg-success text-uppercase">
+              <span class="badge bg-dark rounded-pill"></span>
+              Playing/making video games</li>
+            <li class="list-group-item border-0 bg-success text-uppercase">
+              <span class="badge bg-dark rounded-pill"></span>
+              Working as/on a team</li>
+            <li class="list-group-item border-0 bg-success text-uppercase">
+              <span class="badge bg-dark rounded-pill"></span>
+              Leading/supervising a team</li>
+            <li class="list-group-item border-0 bg-success text-uppercase">
+              <span class="badge bg-dark rounded-pill"></span>
+              Manual/petty labor</li>
+            <li class="list-group-item border-0 bg-success text-uppercase">
+              <span class="badge bg-dark rounded-pill"></span>
+              Operating machinery (both heavy and technical)</li>
+            <li class="list-group-item border-0 bg-success text-uppercase">
+              <span class="badge bg-dark rounded-pill"></span>
+              Diagnosing technical issues</li>
           </ul><br>
           <h4 class="text-center">Some programming languages I can use are:</h4>
           <ul class="list-group">
-            <li class="list-group-item border-0 bg-success text-uppercase">C++</li>
-            <li class="list-group-item border-0 bg-success text-uppercase">Python</li>
-            <li class="list-group-item border-0 bg-success text-uppercase">Javascript</li>
-            <li class="list-group-item border-0 bg-success text-uppercase">HTML</li>
+            <li class="list-group-item border-0 bg-success text-uppercase">
+              <span class="badge bg-dark rounded-pill"></span>
+              C++</li>
+            <li class="list-group-item border-0 bg-success text-uppercase">
+              <span class="badge bg-dark rounded-pill"></span>
+              Python</li>
+            <li class="list-group-item border-0 bg-success text-uppercase">
+              <span class="badge bg-dark rounded-pill"></span>
+              Javascript</li>
+            <li class="list-group-item border-0 bg-success text-uppercase">
+              <span class="badge bg-dark rounded-pill"></span>
+              HTML</li>
           </ul>
         </div>
         <div id="jobs" class="container tab-pane fade"><br>
-          <h1 class="fw-bold text-center">PAST EMPLOYMENTS</h1>
+          <h1 class="fw-bold text-center">PAST EMPLOYMENTS</h1><br>
+          <h4 class="text-center"></h4>
         </div>
       </div>
     </div>
